Removed java 8 runtime flags